# github-classroom-tester

./: Main.hs  README.md
tester-go/: main.go
tester-haskell/: tester.cabal
